--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-plugin-template",
+  "name": "vuetify-filterable",
   "version": "0.0.1",
   "private": false,
   "author": {
@@ -7,26 +7,27 @@
     "name": "Albet Novendo",
     "url": "https://github.com/albetnov"
   },
-  "description": "Libary Vue 3 Plugin Template",
+  "description": "Rich filters component for Vuetify",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/albetnov/vue-plugin-template"
+    "url": "https://github.com/albetnov/vuetify-filterable"
   },
   "keywords": [
-    "vue-plugin-template"
+    "vuetify-filterable"
   ],
   "files": [
     "dist"
   ],
   "type": "module",
-  "main": "./dist/vue-plugin-template.umd.cjs",
-  "module": "./dist/vue-plugin-template.js",
-  "types": "./dist/vue-plugin-template.d.ts",
+  "module": "./dist/vuetify-filterable.js",
+  "types": "./dist/vuetify-filterable.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/vue-plugin-template.js",
-      "require": "./dist/vue-plugin-template.umd.cjs"
+      "import": "./dist/vuetify-filterable.js"
+    },
+    "./composeables/useFilters": {
+      "import": "./dist/composeables/useFilters.js"
     },
     "./dist/style.css": "./dist/style.css"
   },
@@ -42,26 +43,29 @@
     "upload": "pnpm build && pnpm publish"
   },
   "peerDependencies": {
-    "vue": "^3.3.4"
+    "@mdi/font": "^7.2.96",
+    "vue": "^3.3.4",
+    "vuetify": "^3.3.13"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
+    "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.0",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.17.0",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@types/node": "^18.17.5",
+    "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint": "^8.47.0",
+    "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.2",
     "typescript": "~5.1.6",
-    "vite": "^4.4.6",
+    "vite": "^4.4.9",
     "vitest": "^0.33.0",
-    "vue-tsc": "^1.8.6"
+    "vue-tsc": "^1.8.8",
+    "vuetify": "^3.3.13"
   }
 }
